tests/algorithms/x/Scala/matrix/largest_square_area_in_matrix.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/matrix/largest_square_area_in_matrix.scala:173: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
      current_row = current_row :+ (BigInt(0).asInstanceOf[Any])
                                ^
one error found
